--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-cookie": "^7.1.0",
     "react-dom": "^18",
-    "react-i18next": "^14.0.5"
+    "react-i18next": "^14.0.5",
+    "react-spring": "^9.7.3"
   },
   "devDependencies": {
     "@types/node": "^20",
