--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,6 +17,7 @@
     "i18next-http-backend": "^2.5.0",
     "i18next-resources-to-backend": "^1.2.0",
     "next": "13.5.6",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-cookie": "^7.1.0",
     "react-dom": "^18",
